--- a/4.html
+++ b/4.html
@@ -7,7 +7,7 @@
 
 <!-- ======= Bibliography Section ======= -->
 		
-<h2>Bibliography</h2>
+<h2>Bibliography</h2><br>
         
 		<div class="container">
     <h3>Topic</h3>
@@ -22,9 +22,10 @@
   <div class="csl-entry">WALSH, FROMA. ‘Human-Animal Bonds I: The Relational Significance of Companion Animals’. <i>Family Process</i>, vol. 48, no. 4, 2009, pp. 462–80. <a href="https://doi.org/10.1111/j.1545-5300.2009.01296.x">https://doi.org/10.1111/j.1545-5300.2009.01296.x</a>.</div>
   <div class="csl-entry">---. ‘Human-Animal Bonds II: The Role of Pets in Family Systems and Family Therapy’. <i>Family Process</i>, vol. 48, no. 4, 2009, pp. 481–99. <a href="https://doi.org/10.1111/j.1545-5300.2009.01297.x">https://doi.org/10.1111/j.1545-5300.2009.01297.x</a>.</div>
   </div>
-  </div>
+  </div><br>
+  
   <div class="container">    
-    <h3>In Art section</h3>
+    <h3>In Art section</h3><br>
 	<div class="container">
 	<h4>Frida Kahlo</h4>
 <div class="csl-bib-body" style="line-height: 2; margin-left: 2em; text-indent:-2em;">
@@ -40,7 +41,7 @@
   <div class="csl-entry">‘Huichol Culture, Symbols, and Meanings - México’. <i>Velas Magazine</i>, 21 July 2020, <a href="https://magazine.velasresorts.com/mexico/huichol-culture-symbols-and-meanings/">https://magazine.velasresorts.com/mexico/huichol-culture-symbols-and-meanings/</a>.</div>
   <div class="csl-entry">Kahlo, Frida, and Raquel Tibol. <i>Frida Kahlo Par Frida Kahlo</i>. Cristian Bourgois Éditeur, 2007.</div>
 </div>	
-</div>
+</div><br>
 <div class="container">
 	<h4>Giosetta Fioroni</h4>
 	
@@ -55,7 +56,7 @@
   <div class="csl-entry"><i>Sandra Petrignani | Giosetta Fioroni Si Racconta (L’Unità, 5/8/2010)</i>. <a href="http://www.sandrapetrignani.it/?p=569">http://www.sandrapetrignani.it/?p=569</a>. Accessed 19 June 2022.</div>
   <div class="csl-entry">Suk, il Mondo di. ‘La mostra Lo sguardo prensile di Giosetta Fioroni Al Blu di Prussia’. <i>il mondo di suk</i>, 26 Sept. 2014, <a href="https://www.ilmondodisuk.com/la-mostralo-sguardo-prensile-di-giosetta-fioroni-al-blu-di-prussia/">https://www.ilmondodisuk.com/la-mostralo-sguardo-prensile-di-giosetta-fioroni-al-blu-di-prussia/</a>.</div>
 </div>
-</div>
+</div><br>
 <div class="container">
 	<h4>Pablo Picasso</h4>
 <div class="csl-bib-body" style="line-height: 2; margin-left: 2em; text-indent:-2em;">
@@ -65,7 +66,7 @@
   <div class="csl-entry">Molinari, Maurizio. ‘Un bassotto la musa segreta di Picasso’. <i>Diritti Animali</i>, <a href="https://www.peacelink.it/animali/a/18331.html">https://www.peacelink.it/animali/a/18331.html</a>. Accessed 19 June 2022.</div>
   <div class="csl-entry">Riding, Alan. ‘Picasso’s Other Muse, Of the Dachshund Kind’. <i>New York Times, Late Edition (East Coast)</i>, Aug. 2006, p. B.7.</div>
  </div>
-</div>
+</div><br>
 <div class="container">
 	<h4>Other Artists</h4>
 <div class="csl-bib-body" style="line-height: 2; margin-left: 2em; text-indent:-2em;">
@@ -76,19 +77,23 @@
   <div class="csl-entry">Sokol, Brett. ‘Archie Warhol Was So Much Like His Dad:&nbsp;[Movies, Performing Arts/Weekend Desk]’. <i>New York Times, Late Edition (East Coast)</i>, July 2017, p. C.14.</div>
 </div>
 </div>			
-</div>
+</div><br>
 
  <div class="container">
  	<h3>Museological Project</h3>
+
 <div class="csl-bib-body" style="line-height: 2; margin-left: 2em; text-indent:-2em;">
-  <div class="csl-entry">Caraceni, Simona. <i>Designing a Taxonomy for Virtual Museums for the Use of Avicom Professionals</i>. ProQuest Dissertations Publishing, 2015. <i>almastart.unibo.it</i>, <a href="https://search.proquest.com/docview/1985629546?pq-origsite=primo">https://search.proquest.com/docview/1985629546?pq-origsite=primo</a>.</div>
-  <div class="csl-entry">Cooper, Alan. <i>About Face: The Essentials of Interaction Design / Alan Cooper</i>. Fourth edition., Wiley, 2014. <i>almastart.unibo.it</i>, <a href="http://www.proquest.com/about/terms-and-conditions.html">http://www.proquest.com/about/terms-and-conditions.html</a>.</div>
+  <div class="csl-entry">Ahmad, Muneeb Imtiaz, et al. ‘A Game-Based Intervention for Improving the Communication Skills of Autistic Children in Pakistan’. <i>Computers Helping People with Special Needs</i>, edited by Klaus Miesenberger et al., vol. 8547, Springer International Publishing, 2014, pp. 513–16. <i>DOI.org (Crossref)</i>, <a href="https://doi.org/10.1007/978-3-319-08596-8_80">https://doi.org/10.1007/978-3-319-08596-8_80</a>.</div>
+  <div class="csl-entry">Caraceni, Simona. <i>Designing a Taxonomy for Virtual Museums for the Use of Avicom Professionals</i>. ProQuest Dissertations Publishing, 2015. <a href="https://search.proquest.com/docview/1985629546?pq-origsite=primo">https://search.proquest.com/docview/1985629546?pq-origsite=primo</a>.</div>
+  <div class="csl-entry">Cooper, Alan. <i>About Face: The Essentials of Interaction Design / Alan Cooper</i>. Fourth edition., Wiley, 2014., <a href="http://www.proquest.com/about/terms-and-conditions.html">http://www.proquest.com/about/terms-and-conditions.html</a>.</div>
   <div class="csl-entry">Gaiani, Marco. ‘PALLADIOLibrary : Un Progetto a Virtualizzazione Crescente per Comprendere Le Opere Di Andrea Palladio’. <i>PALLADIOLibrary : Un Progetto a Virtualizzazione Crescente per Comprendere Le Opere Di Andrea Palladio</i>, 2018, pp. 7–14. <i>www.torrossa.com</i>, <a href="https://doi.org/10.36165/1288">https://doi.org/10.36165/1288</a>.</div>
+  
+  <div class="csl-entry">Miesenberger, Klaus, et al., editors. <i>Computers Helping People with Special Needs: 14th International Conference, ICCHP 2014, Paris, France, July 9-11, 2014, Proceedings, Part I</i>. Springer International Publishing, 2014. <i>DOI.org (Crossref)</i>, <a href="https://doi.org/10.1007/978-3-319-08596-8">https://doi.org/10.1007/978-3-319-08596-8</a>.</div>
+
   <div class="csl-entry"><i>The GIFT Box – Tools and Ways of Working to Help Museums Make Richer Digital Experiences for Their Visitors</i>. <a href="https://gifting.digital/visitorbox-design-cards/">https://gifting.digital/visitorbox-design-cards/</a>. Accessed 25 June 2022.</div>
-</div>  
 </div>
 
-</div>
+</div><br>
 
 <!-- ======= Bibliography END ======= -->
 
