--- a/1_1_4.html
+++ b/1_1_4.html
@@ -12,12 +12,12 @@
 
             <div class="container" id="Location">       
           <h5>The location <!--(in case of on-site application it will be the museum or monument)--></h5>
-          <p>As already mentioned, even if a museum could be physically existent, our application is thought to be suitable also to be used totally online, and accordin to ??? (Beltramini and Gaiani, 2012: 60). and thus we can use to define it these two cathegories:</p>
-          <ul>
+          As already mentioned, our Virtual Exhibition and applications are thought to be autonomously used online; thus, according to Beltramini and Gaiani classification, as reported in the Caraceni Taxonomy (Caraceni, Simona. <i>Designing a Taxonomy for Virtual Museums for the Use of Avicom Professionals</i>. ProQuest Dissertations Publishing, 2015), we can define it using the following two categories:</p></cite>
+	<ul>
           <ol>4.Virtual with real: in this category the researchers have identified a type of virtual museum that they define as a digital space built with the use of technology. This virtual space can shape a real space or an ideal space shaped for virtual exhibition. What identifies the virtual museum is that the objects shown are real objects that have been digitalised for display in a virtual space to be better studied or browsed.</ol>
           <ol>5.Virtual with virtual: this last category covers museums with digital spaces that do not exist in reality, and where the objects are also born in digital space (they do not exist in real world), and are created only for the museum. That is to say a completely virtual museum, according to this classification.</ol>
           </ul>
-          
+	</cite>  
           </div>
    		<!-- ======= Intro>Context>Location end ======= -->
 		
