--- a/1_2_5.html
+++ b/1_2_5.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>1_2_5 PWDB </title>
+    <title>1_2_5 PWDB - Intro - The concept - The museological approach</title>
   </head>
   <body>
+		<!-- ======= Intro>Context start ======= -->
+            <h2>Introduction</h2>
+			<h3>The Concept</h3>  
+	 	  
   	<div class="container" id="Museological">
       <h5>The museological approach</h5>
       
@@ -66,7 +70,7 @@ The application, whose details will be discussed in the Development section, has
 <tr><td>9.3 Interaction beyond the physical visit</td><td>post-visit: engaging the visitor; pre-visit: preparing visit</td></tr> 
 </table>
 </div>
-</div>
+</div><br>
 
   </body>
   </html>
