--- a/ChooseGuide.html
+++ b/ChooseGuide.html
@@ -16,7 +16,7 @@ body, tw-story
 font-family: 'Trispace', sans-serif;
 background-color: #a1d1b2;
 color:black;
-font-size: 3vw;
+font-size: 4vw;
 }</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Home page" tags="" position="650,248" size="200,100">#Home page
 //In the home page of the Museum/Virtual exhibition, a button on the right top corner offers the option &quot;Choose a guide&quot;: click on it to start the interactive experience!//
 
@@ -30,7 +30,7 @@ font-size: 3vw;
 Who want to be your guide through the exhibition?
 
 * &lt;img src=&quot;assets/img/frida_a4.png&quot; width=&quot;5%&quot;&gt; [[Granizo-&gt;Hello!]] - Frida deer
-* &lt;img src=&quot;assets/img/xxx.png&quot; width=&quot;5%&quot;&gt; [[Petote-&gt;Hello!]] - Giosetta Fioroni dog
+* &lt;img src=&quot;assets/img/fioroni.png&quot; width=&quot;5%&quot;&gt; [[Petote-&gt;Hello!]] - Giosetta Fioroni dog
 * &lt;img src=&quot;assets/img/picasso_blue.png&quot; width=&quot;5%&quot;&gt; [[Lump-&gt;Hello!]] - Pablo Picasso dog
 * &lt;img src=&quot;assets/img/matisse_gatto.jpeg&quot; width=&quot;5%&quot;&gt; [[Minouche-&gt;Hello!]] - Henri Matisse cat
 * [[//Other//-&gt;Hello!]] //- still not available//
@@ -54,7 +54,7 @@ Hello, I am your guide!
 My name is ... and ... is my human.
 [[Let&#39;s start with a story!-&gt;Choose a story]]
 
-&lt;img src=&quot;assets/img/ID/choose_guide.png&quot; width=&quot;25%&quot;&gt;</tw-passagedata><tw-passagedata pid="5" name="Choose a story" tags="" position="1004,549" size="100,100">#Choose a story
+&lt;img src=&quot;assets/img/ID/choose_guide.png&quot; width=&quot;25vw&quot;&gt;</tw-passagedata><tw-passagedata pid="5" name="Choose a story" tags="" position="1004,549" size="100,100">#Choose a story
 
 //In this passage, the user can choose the story they want to be told from the guide//
 
@@ -135,7 +135,7 @@ Here you are in the Artist&#39;s room of the exhibition.
 &lt;div class=&quot;sketchfab-embed-wrapper&quot;&gt;
 		&lt;iframe title=&quot;Frida&#39;s room&quot; frameborder=&quot;0&quot; allowfullscreen mozallowfullscreen=&quot;true&quot; webkitallowfullscreen=&quot;true&quot; allow=&quot;autoplay; fullscreen; xr-spatial-tracking&quot; xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src=&quot;https://sketchfab.com/models/e5f124def4dc40dcaf96f73a2363854c/embed?annotations_visible=1&quot;&gt; &lt;/iframe&gt; &lt;p style=&quot;font-size: 13px; font-weight: normal; margin: 5px; color: #4A4A4A;&quot;&gt; &lt;a href=&quot;https://sketchfab.com/3d-models/fridas-room-e5f124def4dc40dcaf96f73a2363854c?utm_medium=embed&amp;utm_campaign=share-popup&amp;utm_content=e5f124def4dc40dcaf96f73a2363854c&quot; target=&quot;_blank&quot; style=&quot;font-weight: bold; color: #1CAAD9;&quot;&gt; Frida&#39;s room &lt;/a&gt; by &lt;a href=&quot;https://sketchfab.com/alisiazarbo?utm_medium=embed&amp;utm_campaign=share-popup&amp;utm_content=e5f124def4dc40dcaf96f73a2363854c&quot; target=&quot;_blank&quot; style=&quot;font-weight: bold; color: #1CAAD9;&quot;&gt; alisiazarbo &lt;/a&gt; on &lt;a href=&quot;https://sketchfab.com?utm_medium=embed&amp;utm_campaign=share-popup&amp;utm_content=e5f124def4dc40dcaf96f73a2363854c&quot; target=&quot;_blank&quot; style=&quot;font-weight: bold; color: #1CAAD9;&quot;&gt;Sketchfab&lt;/a&gt;
 		&lt;/div&gt;
-&lt;img src=&quot;assets/img/ID/room.png&quot; width=&quot;25%&quot;&gt;
+&lt;img src=&quot;assets/img/ID/room.png&quot; width=&quot;25vw&quot;&gt;
 
 Enjoy your visit!
 
@@ -170,7 +170,7 @@ Choose [[a new story-&gt;Choose a story]]
 Please let to us your anonymous opionion! 
 Your suggestions would be really useful to improve the quality of our services:
 
-&lt;img src=&quot;assets/img/ID/evaluation.png&quot; width=&quot;25%&quot;&gt;
+&lt;img src=&quot;assets/img/ID/evaluation.png&quot; width=25vw&quot;&gt;
 
 * Did you like the guide you have choosen? (dropdown: 2bind $guide, &quot;extremely&quot;, &quot;very&quot;, &quot;somewhat&quot;, &quot;not so&quot;, &quot;not at all&quot;)
 * How useful have been the contents you were told? (dropdown: 2bind $contents, &quot;extremely&quot;, &quot;very&quot;, &quot;somewhat&quot;, &quot;not so&quot;, &quot;not at all&quot;)
@@ -190,7 +190,7 @@ These are your answers to the evalution survey, do you confirm?
 No, go back to the [[survey-&gt;Evaluate the experience]] 
 Yes, (checkbox: 2bind $Yes,&quot;I want to send my answers&quot;). [[Goodbye!-&gt;Home page]] 
 
-&lt;img src=&quot;assets/img/ID/bye.png&quot; width=&quot;25%&quot;&gt;</tw-passagedata><tw-passagedata pid="14" name="Involving the user - additional services" tags="" position="1210,300" size="100,100">#Involving the user - additional services
+&lt;img src=&quot;assets/img/ID/bye.png&quot; width=&quot;25vw&quot;&gt;</tw-passagedata><tw-passagedata pid="14" name="Involving the user - additional services" tags="" position="1209,300" size="100,100">#Involving the user - additional services
 
 //In this passage, the user is asked for additional services as Share their stories, explore the merchandising options, or - in the future - use the new tool for Searching the pet.
 The user can also leave the application.//
@@ -205,7 +205,7 @@ We are concluding our time togheter, before saying goodbye, would you like to do
 * Search for your pet - [[//in progress application//-&gt;Search for your pet]]
 * [[None-&gt;Evaluate the experience]] of them
 
-&lt;img src=&quot;assets/img/ID/concluding.png&quot; width=&quot;25%&quot;&gt;</tw-passagedata><tw-passagedata pid="15" name="Share your story" tags="" position="1075,301" size="100,100">#Share your story
+&lt;img src=&quot;assets/img/ID/concluding.png&quot; width=&quot;25vw&quot;&gt;</tw-passagedata><tw-passagedata pid="15" name="Share your story" tags="" position="1075,301" size="100,100">#Share your story
 
 //In this passage, the user can use the &quot;Share your story&quot; form to upload a photo and a brief text about their pet-human story.
 The user can then choose among going back to the additional services or finishing the interactive experience.//
