--- a/ChooseGuide.html
+++ b/ChooseGuide.html
@@ -54,7 +54,7 @@ Hello, I am your guide!
 My name is ... and ... is my human.
 [[Let&#39;s start with a story!-&gt;Choose a story]]
 
-&lt;img src=&quot;assets/img/ID/choose_guide.png&quot; width=&quot;250vw&quot;&gt;</tw-passagedata><tw-passagedata pid="5" name="Choose a story" tags="" position="1004,549" size="100,100">#Choose a story
+&lt;img src=&quot;assets/img/ID/choose_guide.png&quot; </tw-passagedata><tw-passagedata pid="5" name="Choose a story" tags="" position="1004,549" size="100,100">#Choose a story
 
 //In this passage, the user can choose the story they want to be told from the guide//
 
