--- a/ChooseGuide.html
+++ b/ChooseGuide.html
@@ -214,7 +214,7 @@ The user can then choose among going back to the additional services or finishin
 
 Please let your pet-human story in Wanted! project:
 
-&lt;iframe src=&quot;Share.html&quot;&gt;&lt;/iframe&gt;
+&lt;iframe src=&quot;https://enri-ca.github.io/WANTED/index.html#cta&quot;&gt;&lt;/iframe&gt;
 
 Thank you very much! 
 
