--- a/2_2.html
+++ b/2_2.html
@@ -5,29 +5,29 @@
 	</head>
 	<body>      
 		<!-- ======= Development>Interaction "project - users" Diagram ======= -->
-<section class="inner-page">
+
 <h2>Development</h2>
 <h3>Interaction "project - users" Diagram</h3>
 
 <div class="container" id="ID"> 
-<h4>Choose your guide application</h4>
+<h4>Choose your guide application</h4> 
 
   <div class="row">
-    <div class="col-lg-6 col-md-6 d-flex align-items-stretch">
+    <div class="col-lg-12 col-md-12 d-flex align-items-stretch">
      <img src="assets/img/interaction/ChooseGuide.JPG" title="Choose your guide interaction schema" align="middle">
 	 <div class="portfolio-links">
 			<a href="assets/img/interaction/ChooseGuide.JPG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Choose your guide interaction schema"><i class="bx bx-plus"></i></a>
 		</div>
-    </div>      
-    <div class="col-lg-6 col-md-6 d-flex align-items-stretch">
-     <a href="ChooseGuide.html" ondblclick="window.open(this.href, 'mywin', 'left=20,top=20,width=500,height=500,toolbar=1,resizable=0'); return false;">
-	 <iframe src="ChooseGuide.html" title="Choose your guide application" width="100%"></iframe>	
+    </div>  
+    
+    <div class="col-lg-12 col-md-12 d-flex align-items-stretch iframe">
+     <iframe title="Choose your guide application" width="100%"></iframe>
     </div>
   </div>
 
-  </div>		
-<br>  
-</section>
+  </div>
+  <br>  
+
 <!-- ======= Development>Interaction "project - users" Diagram ======= -->
 		
 	</body>
