--- a/1_2_3.html
+++ b/1_2_3.html
@@ -66,6 +66,9 @@
 			<a href="assets/img/step1_3.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Physical reference institution - STAGE 3 – Create design brief"><i class="bx bx-plus"></i></a>
 			</div>
 	</p>
+	<p>The final design brief for the <strong>physical institution</strong> designed the <strong>3d print your pet application</strong> with the following characteristics: devoted to the <strong>goal of increasing the visitor partecipation</strong>, oriented to the <strong>target audience of casual turist</strong> through the <strong>retail asset</strong>.<br>
+In particular, we devised the possibility to engage the casual tourists, that who could encounter <strong>barriers</strong> due to the <strong>low visibility (hidden)</strong> of the museum or the <strong>unavailable mobile connection poor signage</strong>, via the <strong>smart phones devices</strong> they are provided of during the travel or via <strong>computers</strong> they have at home before the visit; the museum could offer in site or off-site a <strong>3d printer</strong> service to 3d print a model of their pet.<br>
+<strong>Motivations</strong> to visit the place or use the service include <strong>curiosity and nostalgia</strong>; <strong>capabilities</strong> required or assumed are the familiar use of <strong>mobile apps and websites</strong> while the <strong>3d modelling</strong> is previewed as to be improved.</p>
   </div>
   <div class="right"><h6>Virtual Exihbition</h6>
   <p><img src="assets/img/step3.png" style="border-radius: 0;">
