--- a/1_2_3.html
+++ b/1_2_3.html
@@ -10,13 +10,13 @@
 			<h3>The Concept</h3>  
 	  
   	<div class="container" id="ideation_cards">
-        <h5>Ideation Cards</h5>
+        <h4>Ideation Cards</h4>
 		<p>The use of Ideation Cards, also helped to go on with the following steps of ideation.<br>
 		In this stage of ideation, we decided to continue to analyse and develop two scenarios: a virtual initiative located in a real museum, and a virtual museum located exclusively online.
 		
 			<!-- ======= Intro>Concept>IdeationCards>STEPS start ======= -->
 		<div class="container">
-  <h6>STAGE 2 – Define Institutional goals</h6>
+  <h5>STAGE 2 – Define Institutional goals</h5>
   <p>The goals we thought to set for both the institutions were quite similar (5/8) even if with different ranking: the common best ranked one is to <strong>increase the online visits</strong> the others are related in different ways to improve the educational impact and the social engagement (Attract new demographics, Change visitor attitudes and beliefs, Use assets in new ways, Increase outreach).</p>
   
   <div class="two-grid">
@@ -27,7 +27,7 @@
 			</div>
 	</p>
   </div>
-  <div class="right"><h6>Virtual Exihbition</h6>
+  <div class="right"><h5>Virtual Exihbition</h5>
   <p><img src="assets/img/step2.png" style="border-radius: 0">
 	<div class="portfolio-links">
 	<a href="assets/img/step2.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Virtual Exihbition reference institution - STAGE 2 – Define Institutional goals"><i class="bx bx-plus"></i></a>
@@ -57,7 +57,7 @@
   <br>
   </div>
   <div class="container">
-  <h6>STAGE 3 – Create design brief</h6>
+  <h5>STAGE 3 – Create design brief</h5>
 
   <div class="two-grid">
   <div class="left"><h6>Physical reference institution</h6>
@@ -83,6 +83,21 @@ It can be a barrier too, if the user doesn’t have one of the devices needed to
   </div>
 
         </div>
+<div class="container">
+        <table>
+        <tr><th></th><th>Physical Museum</th><th>Virtual Exhibition</th></tr>
+<tr><td>goal</td><td>increasing the visitor partecipation</td><td>Increase outreach</strong></td></tr>
+<tr><td>star asset</td><td>retail</td><td>digital resource</td></tr>
+<tr><td>audience</td><td>Casual turist</td><td>passionated with animals</td></tr>
+<tr><td></td><td></td><td></td></tr>
+<tr><td>motivations</td><td>curiosity, nostalgia</td><td>personal relevance, inclusion</td></tr>
+<tr><td>barriers</td><td>hidden, poor signage</td><td>irrelevant, lack of access to technology</td></tr>
+<tr><td></td><td></td><td></td></tr>
+<tr><td>devices</td><td>smart phones, computer, 3d printer</td><td>smart phones, computer, tablet</td></tr>
+<tr><td>capabilities</td><td>3d modelling, mobile apps, websites</td><td>websites</td></tr>
+        </table>
+        </div>
+
 </div>
   </body>
   </html>
