--- a/1_2_3.html
+++ b/1_2_3.html
@@ -11,8 +11,9 @@
 	  
   	<div class="container" id="ideation_cards">
         <h4>Ideation Cards</h4>
-		<p>The use of Ideation Cards, also helped to go on with the following steps of ideation.<br>
-		In this stage of ideation, we decided to continue to analyse and develop two scenarios: a virtual initiative located in a real museum, and a virtual museum located exclusively online.
+		<p>Afer having used the Ideation Cards in the definition of the <strong>Relevant assets and Target audience in The contex (STAGE 1 - Define context</strong>), they also helped us to go on with the following steps of ideation.<br>
+		In this stage, we decided to continue to analyse and develop both the scenarios: a virtual initiative located in a real museum, and a virtual museum located exclusively online.<br>
+			At the end of <strong>STAGE 3</strong>, we definetly decided to go for the Virtual Exhibition and related applications.
 		
 			<!-- ======= Intro>Concept>IdeationCards>STEPS start ======= -->
 		<div class="container">
