--- a/2_2.html
+++ b/2_2.html
@@ -13,15 +13,20 @@
 <h4>Choose your guide application</h4> 
 
   <div class="row">
+    <div class="col-lg-6 col-md-6 d-flex align-items-stretch">
+      <h5><b></b></h5></br>
+        </div>
+    <div class="col-lg-6 col-md-6 d-flex align-items-stretch">
+      <h5></h5></br>
+     </div>      
+  </div>
+
+  <div class="row">
     <div class="col-lg-12 col-md-12 d-flex align-items-stretch">
      <img src="assets/img/interaction/ChooseGuide.JPG" title="Choose your guide interaction schema" align="middle">
-	 <div class="portfolio-links">
-			<a href="assets/img/interaction/ChooseGuide.JPG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Choose your guide interaction schema"><i class="bx bx-plus"></i></a>
-		</div>
-    </div>  
-    
+    </div>      
     <div class="col-lg-12 col-md-12 d-flex align-items-stretch iframe">
-     <iframe title="Choose your guide application" width="100%"></iframe>
+     <iframe ondblclick="requestFullscreen()" src="ChooseGuide.html" title="Choose your guide application" width=100%" allow="fullscreen"></iframe>
     </div>
   </div>
 
