--- a/1_2_3.html
+++ b/1_2_3.html
@@ -87,18 +87,17 @@ It can be a barrier too, if the user doesn’t have one of the devices needed to
 <div class="container">
         <table>
         <tr><th></th><th>Physical Museum</th><th>Virtual Exhibition</th></tr>
-<tr><td>goal</td><td>increasing the visitor partecipation</td><td>Increase outreach</strong></td></tr>
-<tr><td>star asset</td><td>retail</td><td>digital resource</td></tr>
-<tr><td>audience</td><td>Casual turist</td><td>passionated with animals</td></tr>
-<tr><td></td><td></td><td></td></tr>
-<tr><td>motivations</td><td>curiosity, nostalgia</td><td>personal relevance, inclusion</td></tr>
-<tr><td>barriers</td><td>hidden, poor signage</td><td>irrelevant, lack of access to technology</td></tr>
-<tr><td></td><td></td><td></td></tr>
-<tr><td>devices</td><td>smart phones, computer, 3d printer</td><td>smart phones, computer, tablet</td></tr>
-<tr><td>capabilities</td><td>3d modelling, mobile apps, websites</td><td>websites</td></tr>
+<tr><td>GOAL</td><td>increasing the visitor partecipation</td><td>Increase outreach</strong></td></tr>
+<tr><td>ASSET</td><td>retail</td><td>digital resource</td></tr>
+<tr><td>AUDIENCE</td><td>Casual turist</td><td>passionated with animals</td></tr>
+<tr><td>MOTIVATIONS</td><td>curiosity, nostalgia</td><td>personal relevance, inclusion</td></tr>
+<tr><td>BARRIERS</td><td>hidden, poor signage</td><td>irrelevant, lack of access to technology</td></tr>
+<tr><td>DEVICES</td><td>smart phones, computer, 3d printer</td><td>smart phones, computer, tablet</td></tr>
+<tr><td>CAPABILITIES</td><td>3d modelling, mobile apps, websites</td><td>websites</td></tr>
         </table>
         </div>
 
 </div>
+<br>
   </body>
   </html>
