--- a/2_2.html
+++ b/2_2.html
@@ -22,10 +22,15 @@
   </div>
 
   <div class="row">
-    <div class="col-lg-6 col-md-6 d-flex align-items-stretch">
-     <img src="assets/img/interaction/ChooseGuide.JPG" title="Choose your guide interaction schema" align="middle">
+    <div class="col-lg-8 col-md-8 d-flex align-items-stretch">
+     <img src="assets/img/interaction/ChooseGuide.JPG" title="Choose your guide interaction schema">
+	    <p>
+		<div class="portfolio-links">
+			<a href="assets/img/interaction/ChooseGuide.JPG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Choose your guide interaction schema"><i class="bx bx-plus"> </i></a>
+		</div>
+		</p>
     </div>      
-    <div class="col-lg-6 col-md-6 d-flex align-items-stretch iframe">
+    <div class="col-lg-4 col-md-4 d-flex align-items-stretch iframe">
      <iframe ondblclick="requestFullscreen()" src="ChooseGuide.html" title="Choose your guide application" width=100%" allow="fullscreen"></iframe>
     </div>
   </div>
