--- a/2_1.html
+++ b/2_1.html
@@ -2,6 +2,13 @@
 <html lang="en">
   <head>
     <title>2_1 PWDB - Development - The story - Personas - Scenario</title>
+    <link href="assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
+  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
   </head>
   <body>
     		<!-- ======= Development>Interaction "project - users" Diagram ======= -->
