--- a/1_1_1.html
+++ b/1_1_1.html
@@ -38,9 +38,9 @@
             </div>
 			
             <div class="container col-lg-4 col-md-4">
-              <img src="https://www.storiaememoriadibologna.it/imageserver/gallery_big/files/vecchio_archivio/seconda-guerra/d/D18250_174.jpg" class="img-fluid" alt="Sacrario. Bologna 1945 o 1946. Il Sacrario dei caduti della Resistenza in Piazza del Nettuno a Bologna. Credits Istituzione Bologna Musei" title="Sacrario. Bologna 1945 o 1946. Il Sacrario dei caduti della Resistenza in Piazza del Nettuno a Bologna. Credits Istituzione Bologna Musei">
-              <figcaption>Sacrario. Bologna 1945 o 1946. Il Sacrario dei caduti della Resistenza in Piazza del Nettuno a Bologna. Credits <a href="https://www.storiaememoriadibologna.it/crediti" target="_blank">Istituzione Bologna Musei</a></figcaption>
-
+		<div class="portfolio-links">
+			<a href="https://www.storiaememoriadibologna.it/imageserver/gallery_big/files/vecchio_archivio/seconda-guerra/d/D18250_174.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Sacrario. Bologna 1945 o 1946. Il Sacrario dei caduti della Resistenza in Piazza del Nettuno a Bologna. Credits <a href="https://www.storiaememoriadibologna.it/crediti" target="_blank">Istituzione Bologna Musei</a>"><i class="bx bx-plus"></i></a>
+			</div>              
               <img src="assets/img/KKAmsterdam.JPG" class="img-fluid" alt="KattenKabinet (Cat Cabinet) in Amsterdam website https://www.kattenkabinet.nl/" title="KattenKabinet (Cat Cabinet) in Amsterdam website https://www.kattenkabinet.nl/">
               <figcaption>KattenKabinet (Cat Cabinet) in Amsterdam website <a href="https://www.kattenkabinet.nl/">https://www.kattenkabinet.nl/</a></figcaption>
 			 
