--- a/1_1_1.html
+++ b/1_1_1.html
@@ -39,7 +39,8 @@
 			
             <div class="container col-lg-4 col-md-4">
 			<p><img src="https://www.storiaememoriadibologna.it/imageserver/gallery_big/files/vecchio_archivio/seconda-guerra/d/D18250_174.jpg" style="border-radius: 0">
-				<div class="portfolio-links">
+			<figcaption> Sacrario. Bologna 1945 o 1946. Il Sacrario dei caduti della Resistenza in Piazza del Nettuno a Bologna. Credits <a href="https://www.storiaememoriadibologna.it/crediti" target="_blank">Istituzione Bologna Musei</a></figcaption>	
+		    <div class="portfolio-links">
 			<a href="https://www.storiaememoriadibologna.it/imageserver/gallery_big/files/vecchio_archivio/seconda-guerra/d/D18250_174.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Sacrario. Bologna 1945 o 1946. Il Sacrario dei caduti della Resistenza in Piazza del Nettuno a Bologna."><i class="bx bx-plus"></i></a>
 			</div>
 		</p>
