--- a/1_3.html
+++ b/1_3.html
@@ -32,7 +32,15 @@ In particular, these are the three main goals the interactive application wants 
 <li><strong>Cultural and educational</strong>: attract new demographics to art history</li>
 <li><strong>Economic</strong>: increase online visits and connected revenues (Instagram posts, partnertship and sponsorships, etc.)</li>
 </ul>
-  </div>
+<div class="right"><h5>Virtual Exihbition</h5>
+  <p><img src="assets/img/step2.png" style="border-radius: 0">
+	<div class="portfolio-links">
+	<a href="assets/img/step2.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Virtual Exihbition reference institution - STAGE 2 – Define Institutional goals"><i class="bx bx-plus"></i></a>
+	</div>
+ 
+  </p>
+  </div>  
+</div>
 	<!-- ======= Intro>Goals BODY end ======= -->  
 	  <!-- Vendor JS Files -->
   <script src="assets/vendor/purecounter/purecounter.js"></script>
