--- a/PWDB.html
+++ b/PWDB.html
@@ -59,7 +59,7 @@
 
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top header-inner-pages">
-    <div class="container d-flex align-items-center justify-content-lg-between">
+        <div class="container d-flex align-items-center justify-content-lg-between">
       <h1 class="logo me-auto me-lg-0"><a href="index.html">WANTED<span>!</span></a></h1>
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
@@ -70,15 +70,16 @@
           <li><a class="nav-link scrollto" href="index.html#contact">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
+
       </nav><!-- .navbar -->
-
-      <a href="in_art.html" class="get-started-btn scrollto">The exhibit</a>
-	<a href="ChooseGuide.html" class="get-started-btn scrollto" 
-         onclick="window.open(this.href, 'mywin', 'left=20,top=20,width=500,height=500,toolbar=1,resizable=0'); return false;">Choose your guide!</a>
-      <a href="index.html#cta" class="get-started-btn scrollto" 
+</div>
+ <div style="float: right; margin-right: 5%">      
+<a href="in_art.html" class="get-started-btn scrollto">The exhibit</a></li>
+<a href="ChooseGuide.html" class="get-started-btn scrollto" 
+         onclick="window.open(this.href, 'mywin', 'left=20,top=20,width=600,height=500,toolbar=1,resizable=0'); return false;">Choose your guide!</a>
+<a href="index.html#cta" class="get-started-btn scrollto" 
          onclick="window.open(this.href, 'mywin', 'left=20,top=20,width=500,height=500,toolbar=1,resizable=0'); return false;">Share your story!</a>
-
-    </div>
+</div>
   </header><!-- End Header -->
 
   <main id="main">
