--- a/1_2_3.html
+++ b/1_2_3.html
@@ -88,12 +88,11 @@ In particular, we devised the possibility to engage the casual tourists, that wh
 	<a href="assets/img/step3.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Virtual Exihbition reference institution - STAGE 3 – Create design brief"><i class="bx bx-plus"></i></a>
 	</div>
 </p>
-<p>In this section we found really useful the use of ideation cards, this tool helped us with the delineation of the project taking into account more other aspects. First, the goal that at the end of the project we would the visitor to reach; in this case, we didn’t think this project as primary dedicated to the culture expansion, it has not didactical goals, but it is possible to reach them. Anyway, the most important aim that this project want to reach is the increasing of the outreach; how? First, by creating a safe space of sharing where to find empathy and build a social network, and second, in a more pragmatic way, by providing useful tools to share a personal experience.
-The motivations are at the base of the goals, inclusion and personal relevance are those feelings that the user must feel at the end of its experience.
-The star asset is, obviously, the digital resource, since the initiative is present exclusively on the web; at the same time, the user doesn’t need a particular knowledge of the digital tools, it is sufficient to have a minimal knowledge of how to use a computer in its most simple functionalities.
-It can be a barrier too, if the user doesn’t have one of the devices needed to visualise the experience or an even minimal knowledge of the technology.</p>  </div>
-  </div>
-
+<p>In the final design for the virtual museum, as main goal that the project would reach, we thought about the increasing of the outreach; In fact, the virtual space designed aims at reaching a large audience, to create an everyday bigger social network.
+The motivations are at the base of the goal, inclusion and personal relevance are those sensations that the user must feel at the end of its experience.
+The final experience designed, is a guided visit (with the possibility to personalize the guide in relation with the user's preferences) of a virtual museum space; a the end of the visit, a space of interaction with the user is provided, giving him/her the possibility to choice between some other activities.
+Even if this is a digital resource, the user doesn’t need a particular knowledge of the digital tools, it is sufficient to have a minimal knowledge of how to use a computer in its most simple functionalities.
+It can be a barrier too, if the user doesn’t have one of the devices needed to visualise the experience or an even minimal knowledge of the technology; but nowadays it's not so frequent.</p>
         </div>
 <div class="container">
         <table>
