--- a/1_2_1.html
+++ b/1_2_1.html
@@ -64,14 +64,21 @@ We have been particularly impressed by the sentimental value that most of these 
         
               <div class="row">
     <div class="col-lg-4 col-md-4 d-flex align-items-stretch">
-  <img src="assets/img/maya.png">
+  <img src="assets/img/maya.png" width="33%">
+		      </div>
+		      <div class="col-lg-4 col-md-4 d-flex align-items-stretch">
 	    <figcaption>MAYA THE SAMOYED (nickname: <a href="https://www.instagram.com/mayapolarbear/">mayapolarbear</a>), 1.9 M followers </figcaption>
-  <div class="col-lg-4 col-md-4 d-flex align-items-stretch">
+		      </div>
+			      <div class="col-lg-4 col-md-4 d-flex align-items-stretch">
    <img src="assets/img/topi.png" width="33%">
+		      </div>
+		      <div class="col-lg-4 col-md-4 d-flex align-items-stretch">
 	  <figcaption>TOPI THE CORGI (nickname: <a href="https://www.instagram.com/topithecorgi/?hl=it">topithecorgi</a>), 156 K followers </figcaption>
   </div>
   <div class="col-lg-4 col-md-4 d-flex align-items-stretch">
       <img src="assets/img/marnie.png" width="33%">
+		      </div>
+		      <div class="col-lg-4 col-md-4 d-flex align-items-stretch">
 	  <figcaption>MARNIE THE DOG (nickname: <a href="https://www.instagram.com/marniethedog/">marniethedog</a>), 1.6 M followers </figcaption>
 	  
     </div>
