--- a/1_2_1.html
+++ b/1_2_1.html
@@ -64,8 +64,8 @@ We have been particularly impressed by the sentimental value that most of these 
         
               <div class="row">
     <div class="col-lg-4 col-md-4 d-flex align-items-stretch">
-  <img src="assets/img/maya.png" width="33%">
- <p>MAYA THE SAMOYED (nickname: <a href="https://www.instagram.com/mayapolarbear/">mayapolarbear</a>), 1.9 M followers </p>
+  <p><img src="assets/img/maya.png" width="33%">
+<figcaption>MAYA THE SAMOYED (nickname: <a href="https://www.instagram.com/mayapolarbear/">mayapolarbear</a>), 1.9 M followers</figcaption> </p>
  </div>
  <div class="col-lg-4 col-md-4 d-flex align-items-stretch">
    <img src="assets/img/topi.png" width="33%">
