--- a/1_2_1.html
+++ b/1_2_1.html
@@ -64,22 +64,26 @@ We have been particularly impressed by the sentimental value that most of these 
         
               <div class="row">
     <div class="col-lg-4 col-md-4 d-flex align-items-stretch">
-  <p><img src="assets/img/maya.png" width="33%"></p>
-<p><figcaption>MAYA THE SAMOYED (nickname: <a href="https://www.instagram.com/mayapolarbear/">mayapolarbear</a>), 1.9 M followers</figcaption> </p>
+<img src="assets/img/maya.png" width="33%">
  </div>
  <div class="col-lg-4 col-md-4 d-flex align-items-stretch">
-   <img src="assets/img/topi.png" width="33%">
-<p>TOPI THE CORGI (nickname: <a href="https://www.instagram.com/topithecorgi/?hl=it">topithecorgi</a>), 156 K followers </pn>
-  </div>
-  <div class="col-lg-4 col-md-4 d-flex align-items-stretch">
-   <img src="assets/img/marnie.png" width="33%">
-	  <p>MARNIE THE DOG (nickname: <a href="https://www.instagram.com/marniethedog/">marniethedog</a>), 1.6 M followers </p>
-	  
+<img src="assets/img/topi.png" width="33%">
+ </div>
+ <div class="col-lg-4 col-md-4 d-flex align-items-stretch">
+ <img src="assets/img/marnie.png" width="33%">  
     </div>
     </div>
-	
-
+<div class="row">
+<div class="col-lg-4 col-md-4 d-flex align-items-stretch">
+<p>MAYA THE SAMOYED (nickname: <a href="https://www.instagram.com/mayapolarbear/">mayapolarbear</a>), 1.9 M followers</p>
+	</div>
+ <div class="col-lg-4 col-md-4 d-flex align-items-stretch">
+<p>TOPI THE CORGI (nickname: <a href="https://www.instagram.com/topithecorgi/?hl=it">topithecorgi</a>), 156 K followers </p>
+	</div>
+<div class="col-lg-4 col-md-4 d-flex align-items-stretch">
+<p>MARNIE THE DOG (nickname: <a href="https://www.instagram.com/marniethedog/">marniethedog</a>), 1.6 M followers </p>
 </div>
+	</div>
   <!-- Vendor JS Files -->
   <script src="assets/vendor/purecounter/purecounter.js"></script>
   <script src="assets/vendor/aos/aos.js"></script>
