--- a/1_2_3.html
+++ b/1_2_3.html
@@ -94,6 +94,7 @@ The final experience designed, is a guided visit (with the possibility to person
 Even if this is a digital resource, the user doesn’t need a particular knowledge of the digital tools, it is sufficient to have a minimal knowledge of how to use a computer in its most simple functionalities.
 It can be a barrier too, if the user doesn’t have one of the devices needed to visualise the experience or an even minimal knowledge of the technology; but nowadays it's not so frequent.</p>
         </div>
+</div>
 <div class="container">
         <table>
         <tr><th></th><th>Physical Museum</th><th>Virtual Exhibition</th></tr>
