--- a/index.html
+++ b/index.html
@@ -895,7 +895,7 @@
               </div>
               <div class="member-info">
                 <h4>Alisia Zarbo and Billy</h4>
-                <span>Ideation card museological approach; social media analysis; Personae; Scenarios with Twine; Virtual Frida's room with Blender; feasibility plan.</span>
+                <span>Ideation cards museological approach; social media analysis; Personas; Scenarios with Twine; Virtual Frida's room with Blender; feasibility plan.</span>
               </div>
             </div>
           </div>
