--- a/1_1_2.html
+++ b/1_1_2.html
@@ -39,7 +39,7 @@
                 </div>
                 
                 <div class="right">
-                  <h6>Virtual Exihbition</h6>
+                  <h6>Virtual Exhibition</h6>
                   <p>
                     <img src="assets/img/step1.png" style="border-radius: 0">
                    <div class="portfolio-links">
