--- a/1_2_3.html
+++ b/1_2_3.html
@@ -22,9 +22,9 @@
 	  
   	<div class="container" id="ideation_cards">
         <h4>Ideation Cards</h4>
-		<p>Afer having used the Ideation Cards in the definition of the <strong>Relevant assets and Target audience in The contex (STAGE 1 - Define context</strong>), they also helped us to go on with the following steps of ideation.<br>
+		<p>After having used the Ideation Cards in the definition of the <strong>Relevant assets</strong> and <strong>Target audience</strong> in <strong>The context (STAGE 1 - Define context</strong>) section, they also helped us to go on with the following steps of ideation.<br>
 		In this stage, we decided to continue to analyse and develop both the scenarios: a virtual initiative located in a real museum, and a virtual museum located exclusively online.<br>
-			At the end of <strong>STAGE 3</strong>, we definetly decided to go for the Virtual Exhibition and related applications.
+			At the end of <strong>STAGE 3</strong>, we definitely decided to go for the Virtual Exhibition and related applications.
 		
 			<!-- ======= Intro>Concept>IdeationCards>STEPS start ======= -->
 		<div class="container">
@@ -78,11 +78,11 @@
 			<a href="assets/img/step1_3.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Physical reference institution - STAGE 3 – Create design brief"><i class="bx bx-plus"></i></a>
 			</div>
 	</p>
-	<p>The final design brief for the <strong>physical institution</strong> designed the <strong>3d print your pet application</strong> with the following characteristics: devoted to the <strong>goal of increasing the visitor partecipation</strong>, oriented to the <strong>target audience of casual turist</strong> through the <strong>retail asset</strong>.<br>
+	<p>The final design brief for the <strong>physical institution</strong> designed the <strong>3d print your pet application</strong> with the following characteristics: devoted to the <strong>goal of increasing the visitor participation</strong>, oriented to the <strong>target audience of casual tourist</strong> through the <strong>retail asset</strong>.<br>
 In particular, we devised the possibility to engage the casual tourists, that who could encounter <strong>barriers</strong> due to the <strong>low visibility (hidden)</strong> of the museum or the <strong>unavailable mobile connection poor signage</strong>, via the <strong>smart phones devices</strong> they are provided of during the travel or via <strong>computers</strong> they have at home before the visit; the museum could offer in site or off-site a <strong>3d printer</strong> service to 3d print a model of their pet.<br>
 <strong>Motivations</strong> to visit the place or use the service include <strong>curiosity and nostalgia</strong>; <strong>capabilities</strong> required or assumed are the familiar use of <strong>mobile apps and websites</strong> while the <strong>3d modelling</strong> is previewed as to be improved.</p>
   </div>
-  <div class="right"><h6>Virtual Exihbition</h6>
+  <div class="right"><h6>Virtual Exhibition</h6>
   <p><img src="assets/img/step3.png" style="border-radius: 0;">
 	<div class="portfolio-links">
 	<a href="assets/img/step3.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Virtual Exihbition reference institution - STAGE 3 – Create design brief"><i class="bx bx-plus"></i></a>
@@ -98,9 +98,9 @@ It can be a barrier too, if the user doesn’t have one of the devices needed to
 <div class="container">
         <table>
         <tr><th></th><th>Physical Museum</th><th>Virtual Exhibition</th></tr>
-<tr><td>GOAL</td><td>increasing the visitor partecipation</td><td>Increase outreach</strong></td></tr>
+<tr><td>GOAL</td><td>increasing the visitor participation</td><td>Increase outreach</strong></td></tr>
 <tr><td>ASSET</td><td>retail</td><td>digital resource</td></tr>
-<tr><td>AUDIENCE</td><td>Casual turist</td><td>passionated with animals</td></tr>
+<tr><td>AUDIENCE</td><td>Casual tourist</td><td>passionated with animals</td></tr>
 <tr><td>MOTIVATIONS</td><td>curiosity, nostalgia</td><td>personal relevance, inclusion</td></tr>
 <tr><td>BARRIERS</td><td>hidden, poor signage</td><td>irrelevant, lack of access to technology</td></tr>
 <tr><td>DEVICES</td><td>smart phones, computer, 3d printer</td><td>smart phones, computer, tablet</td></tr>
