--- a/1_2_4.html
+++ b/1_2_4.html
@@ -23,7 +23,7 @@
 	  
   	<div class="container" id="conceptual">
         <h4>Conceptual maps</h4>
-		<p>Two different conceptual maps have been done: the first illustrate the primary approach that brought us to the definition of the topic that would have been protagonist; the seconnd, the classification of the topic in museological approach.</p>
+		<p>Two different conceptual maps have been done: the first illustrates the primary approach that brought us to the definition of the topic that would have been protagonist; the second shows the classification of the topic in the museological approach.</p>
 		      <div class="two-grid">
                 <div class="left">
                   <h6>CH topic</h6>
