--- a/2_4.html
+++ b/2_4.html
@@ -30,7 +30,7 @@
 <ol>2. <a href="https://www.omeka.net/" target="_blank">Omeka.net</a> (free trial version): Virtual Exhibition</ol>
 <ol>3. <a href="https://www.blender.org/" target="_blank">Blender</a>: 3d room</ol>
 <ol>4. <a href="https://twinery.org/" target="_blank">Twine</a>: interaction diagrams</ol>
-<ol>5. <a href="https://www.3dflow.net/it/software-di-fotogrammetria-3df-zephyr/" target="_blank">Zephir 3d (14 days free Lite version trial)</a>: 3d print your pet (not realised application)</ol>
+<ol>5. <a href="https://www.3dflow.net/it/software-di-fotogrammetria-3df-zephyr/" target="_blank">Zephir 3d</a> (14 days free Lite version trial): 3d print your pet (not realised application)</ol>
 </ul>
 </p>
 
@@ -38,13 +38,13 @@
 Here are listed just the main:
 </p>
 <p><ul>
-<ol>1.	Scientific committee composed by Art historian, Ethologist, Antropologist etc.: to curate the scientific aspects of the exhibition and the related documentation</ol>
+<ol>1.	Scientific committee composed by Art historians, Ethologists, Anthropologists etc.: to curate the scientific aspects of the exhibition and the related documentation</ol>
 <ol>2.  Art curator/gallerist/copyright lawyer: to face the copyright issues and possible request of reproduction</ol>
 <ol>3.  Pedagogist: to balance the contents and the language used according to the different target of the fruition paths (classical Virtual Exhibition or the 3d rooms or interactive applications)</ol>
 <ol>4.  Software developers in charge of the back-end</ol>
 <ol>5.  Communication team and Social media manager: to curate the website and the social media and reach new public and realise marketing strategies</ol>
 <ol>6.  User experience experts and a 3d modellers: to realize 3d guides and 3d artists’ rooms</ol>
-<ol>7.	Statisticians or sociologist to evaluatehe impact and the feedback </ol>
+<ol>7.	Statisticians or sociologists to evaluate users' feedbacks and impact</ol>
 </ul>
 </p>  
 
